[package]
name = "Practice01"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3.1"
csv = "1.3.0"
chrono = "0.4.38"
regex = "1.11.1"
rand = "0.8.5"
url = "2.5.3"
percent-encoding = "2.3.1"
tokio = { version = "1.34.0", features = ["full"] }
lazy_static = "1.4.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
